LUT-29044 : Manage plurial in pluginWizard

--- a/webapp/WEB-INF/conf/plugins/pluginwizard.properties
+++ b/webapp/WEB-INF/conf/plugins/pluginwizard.properties
@@ -1,7 +1,7 @@
 ################################################################################
 # Configuration file for Wizard plugin
 
-pluginwizard.label.title.manage.fr=Liste des {0}s
+pluginwizard.label.title.manage.fr=Liste des {0}
 pluginwizard.label.title.create.fr=Cr\\u00e9ation d''un {0}
 pluginwizard.label.title.modify.fr=Modification d''un {0}
 pluginwizard.label.buttonAdd.fr=Ajouter un {0}
@@ -13,7 +13,7 @@ pluginwizard.label.infoKey.updated.fr=modifi\\u00e9
 pluginwizard.label.infoKey.removed.fr=supprim\\u00e9
 pluginwizard.label.helpText.fr=texte d''aide
 
-pluginwizard.label.title.manage.=list of {0}s
+pluginwizard.label.title.manage.=list of {0}
 pluginwizard.label.title.create.=Create a {0}
 pluginwizard.label.title.modify.=Modify a {0}
 pluginwizard.label.buttonAdd.=Add a {0}
